# imgui-rs-android-native-window

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  build_push_run.sh  push.sh  push_and_run.sh  run.sh
android_native_window_support/: CMakeLists.txt  build.sh
android_native_window_support/src/: lib.cpp
lib/: lib.h
src/: main.rs
src/android_native_window/: mod.rs
src/common/: mod.rs
src/games/: mod.rs
src/games/com_tencent_ig/: data.rs  data_types.rs  esp.rs  mod.rs  offsets.rs  ui.rs
src/memory_helper/: mod.rs
src/touch_helper/: mod.rs
