[package]
name = "imgui-rs-android-native-window"
version = "0.1.0"
edition = "2021"



[dependencies]

#thiserror = "1.0"
log = "0.4"
simple_logger = "5.0"
imgui = { version = "^0.12", features = ["tables-api"] }
ash = { version = "0.37", default-features = false, features = ["debug", "linked"] }
ash-window = "0.12"
raw-window-handle = "0.5"
#image = "0.25"
gpu-allocator = { version = "0.26", default-features = false, features = ["vulkan"], optional = true }
#ultraviolet = "0.9"
vk-mem = { version = "0.3", optional = true }
imgui-rs-vulkan-renderer = { version="1.13.0", features = ["gpu-allocator"] }
evdev = "0.12.2"
libc = "*"
once_cell ="*"
nohash-hasher = "0.2.0"
[profile.release]
# panic = 'abort'
# lto = 'fat'


[features]
default =[]

debug_bones =[]


